# photos.arsgab.io

./: .browsersyncrc.js  .flake8  .gitignore  .postcssrc.js  CNAME  Makefile  README.md  package-lock.json  package.json  pelicanconf.py  postcss.config.js  publishconf.py  pyproject.toml  requirements.txt  tasks.py
.github/workflows/: build-and-publish.yml
articles/: alsace.md  armenia-2023.md  azur-liguria.md  balkans-1.md  balkans-2.md  beograd-2.md  beograd.md  berlin-hamburg.md  bih-1.md  bih-2.md  crna-gora.md  dushanbe.md  ege-1.md  ege-2.md  ege.md  eurotrip-1.md  eurotrip-2.md  eurotrip-3.md  hello.md  imereti.md  istanbul.md  izmir-1.md  izmir-2.md  izrael.md  japan-1.md  japan-2.md  japan-3.md  kakheti.md  kapadokya.md  karadeniz-1.md  karadeniz-2.md  karadeniz.md  lycia.md  marmara.md  provence.md  samarqand.md  saqartvelo.md  svaneti.md  tbilisi-1.md  tbilisi-2.md  (+2 more)
articles/pages/: 404.md
assets/: locations.toml  manifest.webmanifest  postcss.config.js
assets/scripts/: lazyload.js  mapbox.js  picture.js
assets/static/: style.css
assets/styles/: article.css  base.css  gallery.css  grid.css  home.css  mapbox.css  props.css  reset.css  style.css
assets/templates/: article.html  base.html  index.html  page.html
assets/templates/partials/: pagemeta.html  picture-tag.html  picture.html
docs/: CNAME
markup/: __init__.py  renderers.py
markup/processors/: picture.py
processors/: picture.py
utils/: __init__.py  datastructures.py  media.py  staticfiles.py  templating.py  url.py
