[tool.poetry]
name = "arsgab-io-photos"
version = "0.1.0"
description = "Static site generator for personal photos archive"
authors = ["Arseny Gabdullin <me@arsgab.io>"]
readme = "README.md"
packages = [{include = "arsgab_io_photos"}]

[tool.poetry.dependencies]
python = "^3.10"
pelican = {extras = ["markdown"], version = "^4.8.0"}
python-dotenv = "^1.0.0"
flake8 = "^6.0.0"
invoke = "^2.1.1"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"

[tool.black]
target-version = ["py310"]
skip-string-normalization = true
line_length = 100

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
line_length = 100
combine_as_imports = true
combine_star = true
known_third_party = ["pelikan"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
