[project]
name = "arsgab-io-photos"
version = "1.0.0"
description = "Static site generator for personal photos archive"
authors = [{name = "Arseny Gabdullin", email = "me@arsgab.io"}]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv>=1.0.1",
    "invoke>=2.2.0",
    "pelican[markdown]>=4.9.1",
]

[dependency-groups]
dev = [
    "dotenv>=0.9.9",
    "ruff>=0.12.0",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
extend-select = ["W292"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
